[gd_scene load_steps=18 format=2]

[ext_resource path="res://UI/HUD/Scripts/HUD_UI.gd" type="Script" id=1]
[ext_resource path="res://UI/HUD/Sprites/Progress_Progress.png" type="Texture" id=2]
[ext_resource path="res://UI/HUD/Scripts/Inventory.gd" type="Script" id=3]
[ext_resource path="res://UI/HUD/Minimap.tscn" type="PackedScene" id=4]
[ext_resource path="res://UI/Fonts/HUD_Font.tres" type="DynamicFont" id=6]
[ext_resource path="res://UI/HUD/Scripts/Ammo_Update.gd" type="Script" id=7]
[ext_resource path="res://UI/Fonts/Inventory.tres" type="DynamicFont" id=8]
[ext_resource path="res://UI/HUD/Scripts/Health.gd" type="Script" id=9]
[ext_resource path="res://UI/HUD/Sprites/HP_Over.png" type="Texture" id=10]
[ext_resource path="res://UI/HUD/Sprites/HP_Under.png" type="Texture" id=11]
[ext_resource path="res://UI/HUD/Sprites/HP_Frame.png" type="Texture" id=12]
[ext_resource path="res://UI/Fonts/Azonix-1VB0.otf" type="DynamicFontData" id=13]
[ext_resource path="res://UI/HUD/Sprites/Single_Ammo.png" type="Texture" id=14]
[ext_resource path="res://UI/HUD/Sprites/Multi_Ammo.png" type="Texture" id=15]

[sub_resource type="GDScript" id=4]
script/source = "extends VBoxContainer


func _ready():
	Game.Generator.get_node(\"Player_Abilities\").connect(\"changed\", self, \"update_list\")

func update_list():
	$RichTextLabel.text = \"\"
	
	var abilities = Game.Generator.get_node(\"Player_Abilities\").unlocked_abilities
	for ability in abilities:
		if abilities[ability] == true:
			$RichTextLabel.text += ability + \"\\n\" 
"

[sub_resource type="DynamicFont" id=5]
size = 26
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = 3
extra_spacing_char = 10
font_data = ExtResource( 13 )

[sub_resource type="Animation" id=3]
length = 2.0
tracks/0/type = "bezier"
tracks/0/path = NodePath("Control:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Control:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Control:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Control:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2 )
}

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Minimap" parent="Control" instance=ExtResource( 4 )]
margin_right = 210.0
margin_bottom = 104.0

[node name="UserInfo" type="MarginContainer" parent="Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -960.0
margin_top = -99.0
margin_right = 960.0
grow_horizontal = 2
grow_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control/UserInfo"]
margin_right = 1920.0
margin_bottom = 99.0
alignment = 1

[node name="Weapons" type="HBoxContainer" parent="Control/UserInfo/VBoxContainer"]
margin_right = 1920.0
margin_bottom = 99.0
custom_constants/separation = 0
alignment = 1

[node name="Primary" type="MarginContainer" parent="Control/UserInfo/VBoxContainer/Weapons"]
margin_left = 530.0
margin_right = 930.0
margin_bottom = 99.0
grow_horizontal = 0
grow_vertical = 0
custom_constants/margin_right = 0

[node name="Primary_Container" type="HBoxContainer" parent="Control/UserInfo/VBoxContainer/Weapons/Primary"]
margin_right = 400.0
margin_bottom = 99.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/separation = 20
script = ExtResource( 7 )
weapon_slot = "primary"

[node name="Information" type="VBoxContainer" parent="Control/UserInfo/VBoxContainer/Weapons/Primary/Primary_Container"]
margin_right = 400.0
margin_bottom = 99.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 400, 0 )
custom_constants/separation = 4

[node name="HBoxContainer" type="HBoxContainer" parent="Control/UserInfo/VBoxContainer/Weapons/Primary/Primary_Container/Information"]
margin_right = 400.0
margin_bottom = 32.0
custom_constants/separation = 10
alignment = 2

[node name="Weapon Name" type="Label" parent="Control/UserInfo/VBoxContainer/Weapons/Primary/Primary_Container/Information/HBoxContainer"]
margin_left = 358.0
margin_top = 2.0
margin_right = 358.0
margin_bottom = 29.0
grow_horizontal = 0
grow_vertical = 0
custom_fonts/font = ExtResource( 6 )
align = 2

[node name="reload" type="TextureProgress" parent="Control/UserInfo/VBoxContainer/Weapons/Primary/Primary_Container/Information/HBoxContainer"]
margin_left = 368.0
margin_right = 400.0
margin_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
texture_progress = ExtResource( 2 )
fill_mode = 4
tint_progress = Color( 1, 2, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reserve_Ammo" type="HBoxContainer" parent="Control/UserInfo/VBoxContainer/Weapons/Primary/Primary_Container/Information"]
margin_top = 36.0
margin_right = 400.0
margin_bottom = 68.0
grow_horizontal = 0
grow_vertical = 0
alignment = 2

[node name="Label" type="Label" parent="Control/UserInfo/VBoxContainer/Weapons/Primary/Primary_Container/Information/Reserve_Ammo"]
margin_left = 362.0
margin_top = 2.0
margin_right = 362.0
margin_bottom = 29.0
grow_horizontal = 0
grow_vertical = 0
custom_fonts/font = ExtResource( 6 )

[node name="icon" type="TextureRect" parent="Control/UserInfo/VBoxContainer/Weapons/Primary/Primary_Container/Information/Reserve_Ammo"]
margin_left = 366.0
margin_right = 400.0
margin_bottom = 32.0
texture = ExtResource( 15 )
stretch_mode = 4

[node name="Current_Ammo" type="HBoxContainer" parent="Control/UserInfo/VBoxContainer/Weapons/Primary/Primary_Container/Information"]
margin_top = 72.0
margin_right = 400.0
margin_bottom = 99.0
alignment = 2

[node name="Label" type="Label" parent="Control/UserInfo/VBoxContainer/Weapons/Primary/Primary_Container/Information/Current_Ammo"]
margin_left = 362.0
margin_right = 362.0
margin_bottom = 27.0
custom_fonts/font = ExtResource( 6 )

[node name="icon" type="TextureRect" parent="Control/UserInfo/VBoxContainer/Weapons/Primary/Primary_Container/Information/Current_Ammo"]
margin_left = 366.0
margin_right = 400.0
margin_bottom = 27.0
texture = ExtResource( 14 )
stretch_mode = 4

[node name="VSeparator" type="VSeparator" parent="Control/UserInfo/VBoxContainer/Weapons"]
margin_left = 930.0
margin_right = 990.0
margin_bottom = 99.0
custom_constants/separation = 60

[node name="Secondary" type="MarginContainer" parent="Control/UserInfo/VBoxContainer/Weapons"]
margin_left = 990.0
margin_right = 1390.0
margin_bottom = 99.0
grow_horizontal = 0
grow_vertical = 0
custom_constants/margin_left = 0

[node name="Secondary_Container" type="HBoxContainer" parent="Control/UserInfo/VBoxContainer/Weapons/Secondary"]
margin_right = 400.0
margin_bottom = 99.0
custom_constants/separation = 20
script = ExtResource( 7 )
weapon_slot = "secondary"

[node name="Information" type="VBoxContainer" parent="Control/UserInfo/VBoxContainer/Weapons/Secondary/Secondary_Container"]
margin_right = 400.0
margin_bottom = 99.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 400, 0 )
custom_constants/separation = 4

[node name="HBoxContainer" type="HBoxContainer" parent="Control/UserInfo/VBoxContainer/Weapons/Secondary/Secondary_Container/Information"]
margin_right = 400.0
margin_bottom = 32.0
custom_constants/separation = 10

[node name="reload" type="TextureProgress" parent="Control/UserInfo/VBoxContainer/Weapons/Secondary/Secondary_Container/Information/HBoxContainer"]
margin_right = 32.0
margin_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
texture_progress = ExtResource( 2 )
fill_mode = 4
tint_progress = Color( 1, 2, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Weapon Name" type="Label" parent="Control/UserInfo/VBoxContainer/Weapons/Secondary/Secondary_Container/Information/HBoxContainer"]
margin_left = 42.0
margin_top = 2.0
margin_right = 42.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 6 )

[node name="Reserve_Ammo" type="HBoxContainer" parent="Control/UserInfo/VBoxContainer/Weapons/Secondary/Secondary_Container/Information"]
margin_top = 36.0
margin_right = 400.0
margin_bottom = 68.0

[node name="icon" type="TextureRect" parent="Control/UserInfo/VBoxContainer/Weapons/Secondary/Secondary_Container/Information/Reserve_Ammo"]
margin_right = 34.0
margin_bottom = 32.0
texture = ExtResource( 15 )

[node name="Label" type="Label" parent="Control/UserInfo/VBoxContainer/Weapons/Secondary/Secondary_Container/Information/Reserve_Ammo"]
margin_left = 38.0
margin_top = 2.0
margin_right = 38.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 6 )

[node name="Current_Ammo" type="HBoxContainer" parent="Control/UserInfo/VBoxContainer/Weapons/Secondary/Secondary_Container/Information"]
margin_top = 72.0
margin_right = 400.0
margin_bottom = 99.0

[node name="icon" type="TextureRect" parent="Control/UserInfo/VBoxContainer/Weapons/Secondary/Secondary_Container/Information/Current_Ammo"]
margin_right = 34.0
margin_bottom = 27.0
texture = ExtResource( 14 )

[node name="Label" type="Label" parent="Control/UserInfo/VBoxContainer/Weapons/Secondary/Secondary_Container/Information/Current_Ammo"]
margin_left = 38.0
margin_right = 38.0
margin_bottom = 27.0
custom_fonts/font = ExtResource( 6 )

[node name="Top_Right" type="MarginContainer" parent="Control"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -181.0
margin_bottom = 267.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Top_Right"]
margin_right = 181.0
margin_bottom = 752.0

[node name="Inventory" type="VBoxContainer" parent="Control/Top_Right/VBoxContainer"]
margin_right = 181.0
margin_bottom = 267.0
script = ExtResource( 3 )

[node name="Button" type="Button" parent="Control/Top_Right/VBoxContainer/Inventory"]
margin_right = 181.0
margin_bottom = 33.0
focus_mode = 1
enabled_focus_mode = 1
text = "Inventory"
flat = true
align = 0
expand_icon = true

[node name="Item_List" type="RichTextLabel" parent="Control/Top_Right/VBoxContainer/Inventory"]
margin_top = 37.0
margin_right = 181.0
margin_bottom = 267.0
rect_min_size = Vector2( 0, 230 )
custom_fonts/normal_font = ExtResource( 8 )
meta_underlined = false

[node name="Upgrades" type="VBoxContainer" parent="Control/Top_Right/VBoxContainer"]
margin_top = 271.0
margin_right = 181.0
margin_bottom = 752.0
script = SubResource( 4 )

[node name="Title" type="Label" parent="Control/Top_Right/VBoxContainer/Upgrades"]
margin_right = 181.0
margin_bottom = 27.0
text = "Upgrades"

[node name="RichTextLabel" type="RichTextLabel" parent="Control/Top_Right/VBoxContainer/Upgrades"]
margin_top = 31.0
margin_right = 181.0
margin_bottom = 481.0
rect_min_size = Vector2( 0, 450 )
custom_fonts/normal_font = ExtResource( 8 )
meta_underlined = false

[node name="Health" type="MarginContainer" parent="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -300.0
margin_right = 300.0
margin_bottom = 50.0
grow_horizontal = 2
rect_pivot_offset = Vector2( -25.4526, -61.8015 )
size_flags_horizontal = 2
custom_constants/margin_top = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Health" type="VBoxContainer" parent="Control/Health"]
margin_top = 20.0
margin_right = 600.0
margin_bottom = 50.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
alignment = 1
script = ExtResource( 9 )

[node name="Health_Bar" type="MarginContainer" parent="Control/Health/Health"]
margin_right = 600.0
margin_bottom = 30.0
rect_min_size = Vector2( 600, 30 )

[node name="Progress_Bar" type="TextureProgress" parent="Control/Health/Health/Health_Bar"]
modulate = Color( 1, 5, 1, 1 )
margin_right = 600.0
margin_bottom = 30.0
value = 100.0
texture_under = ExtResource( 11 )
texture_over = ExtResource( 12 )
texture_progress = ExtResource( 10 )
nine_patch_stretch = true
stretch_margin_left = 50
stretch_margin_top = 10
stretch_margin_right = 50
stretch_margin_bottom = 10

[node name="Health_Label" type="Label" parent="Control/Health/Health/Health_Bar"]
margin_left = 248.0
margin_right = 351.0
margin_bottom = 30.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 5 )
text = "100%"
align = 1
__meta__ = {
"_editor_description_": " "
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Fade_In = SubResource( 3 )
[connection signal="pressed" from="Control/Top_Right/VBoxContainer/Inventory/Button" to="Control/Top_Right/VBoxContainer/Inventory" method="_on_Button_pressed"]
